discussion/kv_engine/154999/154999_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Refactor: Move the executor in ep-engine to executor

This is the initial patch in the series to start using the executor
from ep-engine in the core.

This patch just moves the code to implement the executor from
engines/ep/src to executor and update the incluce statement
in all of the affected files.

The executor is still created by the first call to ep-engine
and the core doesn't really know its there.

Change-Id: I2f206de893ac4a78009a6d775304e405f3aa4ce5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-10 05:26:02.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 06:49:22.000000000
Message: 
Patch Set 17: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8295/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/executor/folly_executorpool.cc b/executor/folly_executorpool.cc
index 7a4c16f48..72c3d53bd 100644
--- a/executor/folly_executorpool.cc
+++ b/executor/folly_executorpool.cc
@@ -153,7 +153,7 @@ struct FollyExecutorPool::TaskProxy : public folly::HHWheelTimer::Callback {
         scheduledOnCpuPool = true;
 
         // Perform work on the appropriate CPU pool.
-        cpuPool.add([&amp;proxy = *this] {
+        cpuPool.add([&amp; proxy = *this] {
             Expects(proxy.task.get());
 
             EP_LOG_TRACE(&quot;FollyExecutorPool: Run task \&quot;{}\&quot; id {}&quot;,
@@ -897,7 +897,7 @@ std::vector&lt;ExTask&gt; FollyExecutorPool::unregisterTaskable(Taskable&amp; taskable,
 
     // Finally, remove entry for the unregistered Taskable.
     eventBase-&gt;runInEventBaseThreadAndWait(
-            [&amp;state = this-&gt;state, &amp;taskable]() mutable {
+            [&amp; state = this-&gt;state, &amp;taskable]() mutable {
                 state-&gt;removeTaskable(taskable);
             });
 

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8295/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9698/ : FAILURE

clang-tidy found the following problems:

<pre>
warning: dynamic exception specification "" is deprecated; consider using "noexcept" instead [modernize-use-noexcept]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/access_scanner_bench.cc:18:10: error: "mock/mock_synchronous_ep_engine.h" file not found [clang-diagnostic-error]
#include <mock/mock_synchronous_ep_engine.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/executor_bench.cc:19:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/kvstore_bench.cc:26:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9698/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/access_scanner_bench.cc:18:10:
error: "mock/mock_synchronous_ep_engine.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9698/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36661/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/234/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31333/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10346/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11692/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11273/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19277/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-10 07:52:24.000000000
Message: 
Patch Set 17: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-10 09:12:07.000000000
Message: 
Patch Set 17: Verified+1

override failing clang-tidy and clang-format. Not introduced in this commit
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-10 09:12:09.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
